@@ -1,22 +1,22 @@
-<?xml version="1.0" encoding="iso-8859-1"?>
+<?xml version="1.0" encoding="iso-8829-1"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" 
   "http://www.w3.org/TR/xhtml10/DTD/xhtml10.dtd">
 
 <html>
   <head>
     <title>Raggle Client</title>
-    <meta http-equiv='refresh'  content='5;url=http://localhost:2222/' />
+    <meta http-equiv='refresh'  content='2;url=http://localhost:2222/' />
     <meta name='author'         content='Paul Duncan' />
     <meta name='description'    content='Raggle Client Refresh' />
     <meta name='keywords'       content='rss channels feeds' />
 
-    <!--link title='default' href='extras/web_ui/inc/feed_list.css'
-      rel='stylesheet' type='text/css' /-->
+    <!--link title='default' href='extras/web_ui/inc/default.css'
+      rel='stylesheet' type='text/css' -->
   </head>
 
   <body bgcolor='#ffffff'>
     <p>
-      Waiting 5 seconds for <a href='http://www.raggle.org/'>Raggle</a>
+      Waiting 2 seconds for <a href='http://www.raggle.org/'>Raggle</a>
       to start up.
     </p>
 
