@@ -1,4 +1,4 @@
 @echo off
 cd %PROGRAMFILES%\Raggle
+explorer.exe raggle_client.html
 ruby raggle --server
-explorer.exe "http://localhost:2222/"
