@@ -1572,3 +1572,7 @@
 
 * Tue Sep 23 22:43:28 2003, pabs <pabs@pablotron.org>
   * extras/win32/raggle_server.bat: launch client automatically
+
+* Tue Sep 23 22:51:34 2003, pabs <pabs@pablotron.org>
+  * extras/win32/raggle_client.html: lower refresh to 2 seconds
+  * extras/win32/raggle_server.bat: launch client page automatically
